--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "discord-email-verifier-bot",
+  "name": "discord-qwer-verifier-bot",
   "version": "1.0.0",
-  "description": "ACM at UCLA Discord Server Verification Bot",
+  "description": "QWER Hacks Server Welcome Bot",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "source .env && pm2 start main.js --name discord_bot",
-    "reload": "pm2 reload discord_bot",
-    "stop": "pm2 stop discord_bot"
+    "start": "source .env && node main.js",
+    "reload": "node main.js",
+    "stop": "echo \"there is no stopping me. bite me"
   },
-  "author": "entrohpy",
+  "author": "spurthirallapalli",
   "repository": {
     "type": "git",
-    "url": "https://github.com/entrohpy/discord-email-verifier-bot.git"
+    "url": "https://github.com/spurthirallapalli/QWERHacksBot"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.5",
     "ascii-table": "0.0.9",
     "discord.js": "^12.3.1",
-    "sqlite": "^4.0.14",
-    "sqlite3": "^5.0.0"
+    "papaparse": "^5.3.0"
   },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0"
-  }
+  "devDependencies": {}
 }
